--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,15 +12,15 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
+    - name: Set up pip cache
+      uses: actions/cache@v3.3.2
+      with:
+        path: "~/.cache/pip"
+        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
+        restore-keys: "${{ runner.os }}-pip-"
     - uses: actions/setup-python@v5.0.0
       with:
-        python-version: "${{ matrix.python }}"
-    - run: pip install --upgrade pip
-    - run: pip install -r requirements.txt
-    - run: python setup.py develop
-    - run: nosetests
-    strategy:
-      matrix:
-        python:
-        - '3.8'
-        - '3.8'
+        python-version: '3.8'
+    - run: pip install --editable .[dev]
+    - run: pip install black mypy
+    - run: make check
