--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,15 +12,33 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
     - uses: actions/setup-python@v5.0.0
       with:
-        python-version: '3.8'
-    - run: pip install --editable .[dev]
-    - run: pip install black mypy
-    - run: make check
+        python-version: "${{ matrix.python }}"
+    - run: mkdir /tmp/dynamodb_local
+    - run: wget -O - https://s3-us-west-2.amazonaws.com/dynamodb-local/dynamodb_local_latest.tar.gz | tar xz --directory /tmp/dynamodb_local
+    - run: java -Djava.library.path=/tmp/dynamodb_local/DynamoDBLocal_lib -jar /tmp/dynamodb_local/DynamoDBLocal.jar -sharedDb -inMemory &
+    - run: pip install -r requirements.txt
+    - run: pip install flake8
+    - run: flake8 --ignore=E501,W504
+    - run: mkdir dump && cp -a test/testTable dump
+    - run: python dynamodump.py -m restore -r local -s testTable -d testRestoredTable --host localhost --port 8000 --accessKey a --secretKey a
+    - run: python dynamodump.py -m backup -r local -s testRestoredTable --host localhost --port 8000 --accessKey a --secretKey a
+    - run: python test/test.py
+    - run: python dynamodump.py -m restore -r local -s "*" --host localhost --port 8000 --accessKey a --secretKey a
+    - run: rm -rf dump/test*
+    - run: python dynamodump.py -m backup -r local -s "*" --host localhost --port 8000 --accessKey a --secretKey a
+    - run: python test/test.py
+    - run: python dynamodump.py -m restore -r local -s "test*" --host localhost --port 8000 --accessKey a --secretKey a --prefixSeparator ""
+    - run: rm -rf dump/test*
+    - run: python dynamodump.py -m backup -r local -s "test*" --host localhost --port 8000 --accessKey a --secretKey a --prefixSeparator ""
+    - run: python test/test.py
+    strategy:
+      matrix:
+        BOTO_CONFIG:
+        - "/dev/null"
+        python:
+        - '3.8'
+        - '3.8'
+    env:
+      BOTO_CONFIG: "${{ matrix.BOTO_CONFIG }}"
