--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,30 +15,138 @@ jobs:
     - uses: actions/setup-python@v5.0.0
       with:
         python-version: "${{ matrix.python }}"
-    - run: mkdir /tmp/dynamodb_local
-    - run: wget -O - https://s3-us-west-2.amazonaws.com/dynamodb-local/dynamodb_local_latest.tar.gz | tar xz --directory /tmp/dynamodb_local
-    - run: java -Djava.library.path=/tmp/dynamodb_local/DynamoDBLocal_lib -jar /tmp/dynamodb_local/DynamoDBLocal.jar -sharedDb -inMemory &
-    - run: pip install -r requirements.txt
-    - run: pip install flake8
-    - run: flake8 --ignore=E501,W504
-    - run: mkdir dump && cp -a test/testTable dump
-    - run: python dynamodump.py -m restore -r local -s testTable -d testRestoredTable --host localhost --port 8000 --accessKey a --secretKey a
-    - run: python dynamodump.py -m backup -r local -s testRestoredTable --host localhost --port 8000 --accessKey a --secretKey a
-    - run: python test/test.py
-    - run: python dynamodump.py -m restore -r local -s "*" --host localhost --port 8000 --accessKey a --secretKey a
-    - run: rm -rf dump/test*
-    - run: python dynamodump.py -m backup -r local -s "*" --host localhost --port 8000 --accessKey a --secretKey a
-    - run: python test/test.py
-    - run: python dynamodump.py -m restore -r local -s "test*" --host localhost --port 8000 --accessKey a --secretKey a --prefixSeparator ""
-    - run: rm -rf dump/test*
-    - run: python dynamodump.py -m backup -r local -s "test*" --host localhost --port 8000 --accessKey a --secretKey a --prefixSeparator ""
-    - run: python test/test.py
+    - run: pip uninstall -y nose mock
+    - run: pip install pbr tox tox-travis
+    - run: pip install tox-travis
+    - run: pip install -r doc/requirements.txt .[test]
+    - run: |
+        case ${BUILD} in
+            docs|pep8|cover)
+                tox -e ${BUILD}
+                ;;
+            *)
+                tox
+                ;;
+        esac
+#     # This item has no matching transformer
+#     - pypi:
+#         'on':
+#           tags: true
+#         distributions: sdist bdist_wheel
+#         skip_existing: true
+#         provider: pypi
+#         user: __token__
+#         password:
+#           secure: qzFV1Z/ikoKIwO3/axDAvyF5putIsNzFU19CNz6hPM5kT+FbkgVND9E2QAYERo0Q2e5bZZhxdGCL0FHeYtWUx6rsBuqk/HDPZm/ltWXZ1TqU9XIJy0C7/igNG2ccBvmmY3WPGv0XezBjj0PGDMnPLpsZ7e9XT85EDnO9Ts4hbzIN+MfUQuAXbgfbl+L3ttA7XPXOFWl9Vi9GF9jVvvq16KSP6wKhCu6fQzd4S94m22YyRINEqL4f3.8X7NJeG2vHwhvRTP+9h100RDHwHea7jwA/HizRDJ1OwSxQ75CfqLWL7jatJtIMC0NDlM6ETFOOdDlAX/DZ8EsBmBBNioJyGZgltJlxJ2ObAZbhFfzzksql+XZ9XzUaCuL1Yf3mCfx5VL89wyUHW3iu8qItmxauDXcp6W36XPeh43m/m7h1vUVXenxdS3E0dVfl4tu0q2FZ48zSnUpi0OrF9yUKDQbMVfOPHCWX/Xi3pT683.86xTTmN78I9c05/o7K7m1c9Vlb9u9UW8q0XYbM0zf9NyD2klVJ4Y2zz8+JQyjUJujB23gwm+SILFGprbeoa++yS+EpBQsMZSaZncxHiI4sn3c1b3ZYx4j53Kt5RKCSZa7LS9/VclCFwUik7rTqW7IrzuvvsApW7pNOzgqOplZlAqZOKMijXYvkrYdYQo41oY994ik=
+#       if: "${{ github.event_name == 'push' && ${{ github.ref }} }}"
     strategy:
       matrix:
-        BOTO_CONFIG:
-        - "/dev/null"
         python:
         - '3.8'
         - '3.8'
+        - '3.8'
+        - 3.8
+        - 3.8
+#       # 'allow_failures' transformations are currently unsupported.
+  test_2:
+    runs-on: ubuntu-latest
     env:
-      BOTO_CONFIG: "${{ matrix.BOTO_CONFIG }}"
+      BUILD: docs
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: '3.8'
+    - run: pip uninstall -y nose mock
+    - run: pip install pbr tox tox-travis
+    - run: pip install tox-travis
+    - run: pip install -r doc/requirements.txt .[test]
+    - run: |
+        case ${BUILD} in
+            docs|pep8|cover)
+                tox -e ${BUILD}
+                ;;
+            *)
+                tox
+                ;;
+        esac
+#     # This item has no matching transformer
+#     - pypi:
+#         'on':
+#           tags: true
+#         distributions: sdist bdist_wheel
+#         skip_existing: true
+#         provider: pypi
+#         user: __token__
+#         password:
+#           secure: qzFV1Z/ikoKIwO3/axDAvyF5putIsNzFU19CNz6hPM5kT+FbkgVND9E2QAYERo0Q2e5bZZhxdGCL0FHeYtWUx6rsBuqk/HDPZm/ltWXZ1TqU9XIJy0C7/igNG2ccBvmmY3WPGv0XezBjj0PGDMnPLpsZ7e9XT85EDnO9Ts4hbzIN+MfUQuAXbgfbl+L3ttA7XPXOFWl9Vi9GF9jVvvq16KSP6wKhCu6fQzd4S94m22YyRINEqL4f3.8X7NJeG2vHwhvRTP+9h100RDHwHea7jwA/HizRDJ1OwSxQ75CfqLWL7jatJtIMC0NDlM6ETFOOdDlAX/DZ8EsBmBBNioJyGZgltJlxJ2ObAZbhFfzzksql+XZ9XzUaCuL1Yf3mCfx5VL89wyUHW3iu8qItmxauDXcp6W36XPeh43m/m7h1vUVXenxdS3E0dVfl4tu0q2FZ48zSnUpi0OrF9yUKDQbMVfOPHCWX/Xi3pT683.86xTTmN78I9c05/o7K7m1c9Vlb9u9UW8q0XYbM0zf9NyD2klVJ4Y2zz8+JQyjUJujB23gwm+SILFGprbeoa++yS+EpBQsMZSaZncxHiI4sn3c1b3ZYx4j53Kt5RKCSZa7LS9/VclCFwUik7rTqW7IrzuvvsApW7pNOzgqOplZlAqZOKMijXYvkrYdYQo41oY994ik=
+#       if: "${{ github.event_name == 'push' && ${{ github.ref }} }}"
+  test_3:
+    runs-on: ubuntu-latest
+    env:
+      BUILD: pep8
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: '3.8'
+    - run: pip uninstall -y nose mock
+    - run: pip install pbr tox tox-travis
+    - run: pip install tox-travis
+    - run: pip install -r doc/requirements.txt .[test]
+    - run: |
+        case ${BUILD} in
+            docs|pep8|cover)
+                tox -e ${BUILD}
+                ;;
+            *)
+                tox
+                ;;
+        esac
+#     # This item has no matching transformer
+#     - pypi:
+#         'on':
+#           tags: true
+#         distributions: sdist bdist_wheel
+#         skip_existing: true
+#         provider: pypi
+#         user: __token__
+#         password:
+#           secure: qzFV1Z/ikoKIwO3/axDAvyF5putIsNzFU19CNz6hPM5kT+FbkgVND9E2QAYERo0Q2e5bZZhxdGCL0FHeYtWUx6rsBuqk/HDPZm/ltWXZ1TqU9XIJy0C7/igNG2ccBvmmY3WPGv0XezBjj0PGDMnPLpsZ7e9XT85EDnO9Ts4hbzIN+MfUQuAXbgfbl+L3ttA7XPXOFWl9Vi9GF9jVvvq16KSP6wKhCu6fQzd4S94m22YyRINEqL4f3.8X7NJeG2vHwhvRTP+9h100RDHwHea7jwA/HizRDJ1OwSxQ75CfqLWL7jatJtIMC0NDlM6ETFOOdDlAX/DZ8EsBmBBNioJyGZgltJlxJ2ObAZbhFfzzksql+XZ9XzUaCuL1Yf3mCfx5VL89wyUHW3iu8qItmxauDXcp6W36XPeh43m/m7h1vUVXenxdS3E0dVfl4tu0q2FZ48zSnUpi0OrF9yUKDQbMVfOPHCWX/Xi3pT683.86xTTmN78I9c05/o7K7m1c9Vlb9u9UW8q0XYbM0zf9NyD2klVJ4Y2zz8+JQyjUJujB23gwm+SILFGprbeoa++yS+EpBQsMZSaZncxHiI4sn3c1b3ZYx4j53Kt5RKCSZa7LS9/VclCFwUik7rTqW7IrzuvvsApW7pNOzgqOplZlAqZOKMijXYvkrYdYQo41oY994ik=
+#       if: "${{ github.event_name == 'push' && ${{ github.ref }} }}"
+  test_4:
+    runs-on: ubuntu-latest
+    env:
+      BUILD: cover
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: '3.8'
+    - run: pip uninstall -y nose mock
+    - run: pip install pbr tox tox-travis
+    - run: pip install tox-travis
+    - run: pip install -r doc/requirements.txt .[test]
+    - run: |
+        case ${BUILD} in
+            docs|pep8|cover)
+                tox -e ${BUILD}
+                ;;
+            *)
+                tox
+                ;;
+        esac
+#     # This item has no matching transformer
+#     - pypi:
+#         'on':
+#           tags: true
+#         distributions: sdist bdist_wheel
+#         skip_existing: true
+#         provider: pypi
+#         user: __token__
+#         password:
+#           secure: qzFV1Z/ikoKIwO3/axDAvyF5putIsNzFU19CNz6hPM5kT+FbkgVND9E2QAYERo0Q2e5bZZhxdGCL0FHeYtWUx6rsBuqk/HDPZm/ltWXZ1TqU9XIJy0C7/igNG2ccBvmmY3WPGv0XezBjj0PGDMnPLpsZ7e9XT85EDnO9Ts4hbzIN+MfUQuAXbgfbl+L3ttA7XPXOFWl9Vi9GF9jVvvq16KSP6wKhCu6fQzd4S94m22YyRINEqL4f3.8X7NJeG2vHwhvRTP+9h100RDHwHea7jwA/HizRDJ1OwSxQ75CfqLWL7jatJtIMC0NDlM6ETFOOdDlAX/DZ8EsBmBBNioJyGZgltJlxJ2ObAZbhFfzzksql+XZ9XzUaCuL1Yf3mCfx5VL89wyUHW3iu8qItmxauDXcp6W36XPeh43m/m7h1vUVXenxdS3E0dVfl4tu0q2FZ48zSnUpi0OrF9yUKDQbMVfOPHCWX/Xi3pT683.86xTTmN78I9c05/o7K7m1c9Vlb9u9UW8q0XYbM0zf9NyD2klVJ4Y2zz8+JQyjUJujB23gwm+SILFGprbeoa++yS+EpBQsMZSaZncxHiI4sn3c1b3ZYx4j53Kt5RKCSZa7LS9/VclCFwUik7rTqW7IrzuvvsApW7pNOzgqOplZlAqZOKMijXYvkrYdYQo41oY994ik=
+#       if: "${{ github.event_name == 'push' && ${{ github.ref }} }}"
