run bittremieux/spectrum_utils/gpt-4o-1

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,479 +12,25 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
+    - uses: actions/setup-python@v5.0.0
       with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
+        python-version: "${{ matrix.python }}"
 #     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install coverage tox
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
+    - run: sudo apt-get update
+    - run: if [[ "$TRAVIS_PYTHON_VERSION" == "3.8" ]]; then wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh; else wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh; fi
+    - run: bash miniconda.sh -b -p ${{ github.workspace }}/miniconda
+    - run: export PATH="${{ github.workspace }}/miniconda/bin:$PATH"
+    - run: hash -r
+    - run: conda config --set always_yes yes --set changeps1 no
+    - run: conda update -q conda
+    - run: conda create -q -n test python=$TRAVIS_PYTHON_VERSION
+    - run: source activate test
+    - run: conda install altair matplotlib numba numpy pandas pyteomics pytest -c defaults -c bioconda -c conda-forge
+    - run: python setup.py install
+    - run: pytest
     strategy:
-      matrix: {}
-#       # 'allow_failures' transformations are currently unsupported.
-  test_2:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: pre-commit
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install coverage tox
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
-  test_3:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: py38-2.2
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install coverage tox
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
-  test_4:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: py38-2.2
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install coverage tox
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
-  test_5:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: py38-2.2
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install coverage tox
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
-  test_6:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: py38-2.2
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install coverage tox
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
-  test_7:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: pypy-3.6-2.2
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: pypy-3.6
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install coverage tox
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
-  test_8:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: py38-3.0
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install coverage tox
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
-  test_9:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: py38-3.0
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install coverage tox
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
-  test_10:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: py38-3.0
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install coverage tox
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
-  test_11:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: pypy-3.6-3.0
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: pypy-3.6
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install coverage tox
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
-  test_12:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: py38-3.1
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install coverage tox
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
-  test_13:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: py38-3.1
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install coverage tox
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
-  test_14:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: py38-3.1
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install coverage tox
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
-  test_15:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: pypy-3.6-3.1
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: pypy-3.6
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install coverage tox
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
-  test_16:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: py38-3.2
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install coverage tox
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
-  test_17:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: py38-3.2
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install coverage tox
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
-  test_18:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: py38-3.2
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install coverage tox
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
-  test_19:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: py39-3.2
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.9
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install coverage tox
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
-  test_20:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: pypy-3.6-3.2
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: pypy-3.6
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install coverage tox
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
-  test_21:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: py38-main
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install coverage tox
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
-  test_22:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: py39-main
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.9
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install coverage tox
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
-  test_23:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: pypy-3.6-main
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: pypy-3.6
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install coverage tox
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
+      matrix:
+        python:
+        - '3.8'
+        - '3.8'
+        - '3.8'
