--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,23 +14,6 @@ jobs:
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
-        python-version: "${{ matrix.python }}"
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: sudo apt-get update
-    - run: if [[ "$TRAVIS_PYTHON_VERSION" == "3.8" ]]; then wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh; else wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh; fi
-    - run: bash miniconda.sh -b -p ${{ github.workspace }}/miniconda
-    - run: export PATH="${{ github.workspace }}/miniconda/bin:$PATH"
-    - run: hash -r
-    - run: conda config --set always_yes yes --set changeps1 no
-    - run: conda update -q conda
-    - run: conda create -q -n test python=$TRAVIS_PYTHON_VERSION
-    - run: source activate test
-    - run: conda install altair matplotlib numba numpy pandas pyteomics pytest -c defaults -c bioconda -c conda-forge
-    - run: python setup.py install
-    - run: pytest
-    strategy:
-      matrix:
-        python:
-        - '3.8'
-        - '3.8'
-        - '3.8'
+        python-version: 3.8
+    - run: make install-deps
+    - run: make
