--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,22 @@ jobs:
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
-        python-version: 3.8
-    - run: make install-deps
-    - run: make
+        python-version: "${{ matrix.python }}"
+#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
+    - run: pip install pyte coverage mock
+    - run: python setup.py install
+    - run: nosetests .
+    - uses: distributhor/workflow-webhook@v3.0.5
+      env:
+        webhook_url: "${{ secrets.WEBHOOK_URL }}"
+        webhook_secret: "${{ secrets.WEBHOOK_SECRET }}"
+    strategy:
+      matrix:
+        python:
+        - '3.8'
+        - '3.8'
+        - '3.8'
+        - '3.8'
+        - '3.8'
+        - '3.9'
+        - pypy-3.6
