--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,44 +15,27 @@ jobs:
     - uses: actions/setup-python@v5.0.0
       with:
         python-version: "${{ matrix.python }}"
-    - run: npm i -g elm
+    - run: rm -f ${{ github.workspace }}/.cache/pip/log/debug.log
+    - name: Set up cache
+      uses: actions/cache@v3.3.2
+      with:
+        path: "${{ github.workspace }}/.cache/pip"
+        key: "${{ runner.os }}-path"
+#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
     - run: pip install tox-travis
+    - run: pip install coveralls
+    - run: pip install -r requirements/testing.txt
+    - run: flake8
     - run: tox
     - run: coveralls
-      if: "${{ success() }}"
+#     # This item has no matching transformer
+#     - email:
+#         on_success: change
+#         on_failure: always
     strategy:
       matrix:
         python:
-        - 3.8
-        - 3.8
-        - 3.8
-  test_2:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: cover
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: '3.8'
-    - run: npm i -g elm
-    - run: pip install tox-travis
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
-  test_3:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: black
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: '3.8'
-    - run: npm i -g elm
-    - run: pip install tox-travis
-    - run: tox
-    - run: coveralls
-      if: "${{ success() }}"
+        - '3.8'
+        - '3.8'
+        - '3.8'
+        - '3.9'
