--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,24 +8,194 @@ on:
 #   maximum_number_of_builds: 0
 jobs:
   test:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
+    - name: Set up pip cache
+      uses: actions/cache@v3.3.2
+      with:
+        path: "~/.cache/pip"
+        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
+        restore-keys: "${{ runner.os }}-pip-"
     - uses: actions/setup-python@v5.0.0
       with:
-        python-version: "${{ matrix.python }}"
-    - run: pip install tox-travis coveralls
-    - run: tox
+        python-version: 3.8
+    - run: pip install coverage
+    - run: coverage run --source=olefile -m nose tests
+    - run: coverage report
+    - run: pip install pycodestyle pyflakes
+    - run: pyflakes .
+    - run: pycodestyle --statistics --count .
+    - run: pip install coveralls
+      if: "${{ success() }}"
     - run: coveralls
       if: "${{ success() }}"
-    strategy:
-      matrix:
-        python:
-        - '3.8'
-        - '3.8'
-        - '3.8'
-        - '3.8'
-        - 3.8
-        - 3.8
-#       # 'allow_failures' transformations are currently unsupported.
+  test_2:
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - name: Set up pip cache
+      uses: actions/cache@v3.3.2
+      with:
+        path: "~/.cache/pip"
+        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
+        restore-keys: "${{ runner.os }}-pip-"
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+    - run: pip install coverage
+    - run: coverage run --source=olefile -m nose tests
+    - run: coverage report
+    - run: pip install pycodestyle pyflakes
+    - run: pyflakes .
+    - run: pycodestyle --statistics --count .
+    - run: pip install coveralls
+      if: "${{ success() }}"
+    - run: coveralls
+      if: "${{ success() }}"
+  test_3:
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - name: Set up pip cache
+      uses: actions/cache@v3.3.2
+      with:
+        path: "~/.cache/pip"
+        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
+        restore-keys: "${{ runner.os }}-pip-"
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+    - run: pip install coverage
+    - run: coverage run --source=olefile -m nose tests
+    - run: coverage report
+    - run: pip install pycodestyle pyflakes
+    - run: pyflakes .
+    - run: pycodestyle --statistics --count .
+    - run: pip install coveralls
+      if: "${{ success() }}"
+    - run: coveralls
+      if: "${{ success() }}"
+  test_4:
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - name: Set up pip cache
+      uses: actions/cache@v3.3.2
+      with:
+        path: "~/.cache/pip"
+        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
+        restore-keys: "${{ runner.os }}-pip-"
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+    - run: pip install coverage
+    - run: coverage run --source=olefile -m nose tests
+    - run: coverage report
+    - run: pip install pycodestyle pyflakes
+    - run: pyflakes .
+    - run: pycodestyle --statistics --count .
+    - run: pip install coveralls
+      if: "${{ success() }}"
+    - run: coveralls
+      if: "${{ success() }}"
+  test_5:
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - name: Set up pip cache
+      uses: actions/cache@v3.3.2
+      with:
+        path: "~/.cache/pip"
+        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
+        restore-keys: "${{ runner.os }}-pip-"
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+    - run: pip install coverage
+    - run: coverage run --source=olefile -m nose tests
+    - run: coverage report
+    - run: pip install pycodestyle pyflakes
+    - run: pyflakes .
+    - run: pycodestyle --statistics --count .
+    - run: pip install coveralls
+      if: "${{ success() }}"
+    - run: coveralls
+      if: "${{ success() }}"
+  test_6:
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - name: Set up pip cache
+      uses: actions/cache@v3.3.2
+      with:
+        path: "~/.cache/pip"
+        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
+        restore-keys: "${{ runner.os }}-pip-"
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+    - run: pip install coverage
+    - run: coverage run --source=olefile -m nose tests
+    - run: coverage report
+    - run: pip install pycodestyle pyflakes
+    - run: pyflakes .
+    - run: pycodestyle --statistics --count .
+    - run: pip install coveralls
+      if: "${{ success() }}"
+    - run: coveralls
+      if: "${{ success() }}"
+  test_7:
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - name: Set up pip cache
+      uses: actions/cache@v3.3.2
+      with:
+        path: "~/.cache/pip"
+        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
+        restore-keys: "${{ runner.os }}-pip-"
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: pypy
+    - run: pip install coverage
+    - run: coverage run --source=olefile -m nose tests
+    - run: coverage report
+    - run: pip install pycodestyle pyflakes
+    - run: pyflakes .
+    - run: pycodestyle --statistics --count .
+    - run: pip install coveralls
+      if: "${{ success() }}"
+    - run: coveralls
+      if: "${{ success() }}"
+  test_8:
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - name: Set up pip cache
+      uses: actions/cache@v3.3.2
+      with:
+        path: "~/.cache/pip"
+        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
+        restore-keys: "${{ runner.os }}-pip-"
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: pypy-3.6
+    - run: pip install coverage
+    - run: coverage run --source=olefile -m nose tests
+    - run: coverage report
+    - run: pip install pycodestyle pyflakes
+    - run: pyflakes .
+    - run: pycodestyle --statistics --count .
+    - run: pip install coveralls
+      if: "${{ success() }}"
+    - run: coveralls
+      if: "${{ success() }}"
