--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,70 +12,27 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
-    - run: pip install -U .
-    - run: make test
+    - run: apt-get -y install python3.8 python3.8
+    - run: pip install tox
+    - run: tox
     strategy:
-      matrix: {}
-#       # 'allow_failures' transformations are currently unsupported.
-  test_2:
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: '3.8'
-    - run: pip install -U .
-    - run: make test
-  test_3:
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: '3.8'
-    - run: pip install -U .
-    - run: make test
-  test_4:
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: '3.8'
-    - run: pip install -U .
-    - run: make test
-  test_5:
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: '3.8'
-    - run: pip install -U .
-    - run: make test
-  test_6:
-    runs-on: ubuntu-22.04
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: '3.8'
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install -U .
-    - run: make test
-  test_7:
-    runs-on: ubuntu-22.04
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install -U .
-    - run: make test
+      matrix:
+        TOXENV:
+        - py38-django-18
+        - py38-django-18
+        - py38-django-18
+        - py38-django-18
+        - py38-django-19
+        - py38-django-19
+        - py38-django-19
+        - py38-django-19
+        - py38-django-110
+        - py38-django-110
+        - py38-django-110
+        - py38-django-110
+        - py38-django-111
+        - py38-django-111
+        - py38-django-111
+        - py38-django-111
+    env:
+      TOXENV: "${{ matrix.TOXENV }}"
