--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,18 +15,12 @@ jobs:
     - uses: actions/setup-python@v5.0.0
       with:
         python-version: "${{ matrix.python }}"
-    - run: pip install -r requirements-test.txt
-    - run: python -m unittest discover -s tests
-    - run: coverage run run_tests.py && coverage report -m
-#     # This item has no matching transformer
-#     - email: false
+    - run: pip install -r requirements-dev.txt
+    - run: python test_duo_openvpn.py
     strategy:
       matrix:
         python:
-        - '3.8'
-        - '3.8'
-        - '3.8'
-        - '3.8'
         - 3.8
-        - pypy-3.6
-        - pypy
+        - 3.8
+        - 3.8
+        - 3.8
