--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,15 +8,20 @@ on:
 #   maximum_number_of_builds: 0
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
         python-version: "${{ matrix.python }}"
-    - run: pip install -r requirements.txt
-    - run: python test/all_tests.py
+    - run: python setup.py --quiet install
+    - run: pip --quiet install -r test-requirements.txt
+    - run: python setup.py --quiet test
+    - run: coverage run --source circlify tests.py
+      if: "${{ success() }}"
+    - run: coveralls
+      if: "${{ success() }}"
     strategy:
       matrix:
         python:
@@ -24,3 +29,5 @@ jobs:
         - '3.8'
         - '3.8'
         - '3.8'
+        - '3.9'
+        - '3.10'
