--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,11 +3,12 @@ on:
   push:
     branches:
     - "**/*"
+    - main
   pull_request:
 #   # This item has no matching transformer
 #   maximum_number_of_builds: 0
 jobs:
-  test:
+  linter:
     runs-on: ubuntu-latest
     steps:
     - name: checkout
@@ -16,13 +17,26 @@ jobs:
       with:
         python-version: "${{ matrix.python }}"
     - run: pip install -r requirements.txt
-    - run: pip install -r test_requirements.txt
-    - run: make test
+    - run: cd etip/
+    - run: python manage.py test
     strategy:
       matrix:
+        DJANGO_SETTINGS_MODULE:
+        - etip.settings.dev
         python:
-        - '3.8'
-        - '3.8'
-        - '3.8'
-        - '3.8'
-        - '3.9'
+        - 3.8
+        - 3.8
+    env:
+      DJANGO_SETTINGS_MODULE: "${{ matrix.DJANGO_SETTINGS_MODULE }}"
+  linter_2:
+    runs-on: ubuntu-latest
+    env:
+      DJANGO_SETTINGS_MODULE: etip.settings.dev
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+    - run: pip install flake8
+    - run: flake8 etip/
