--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,19 +15,14 @@ jobs:
     - uses: actions/setup-python@v5.0.0
       with:
         python-version: "${{ matrix.python }}"
-    - run: pip install coverage vcrpy
-    - run: python setup.py install
-    - run: coverage run --source=censusgeocode -m unittest
-    - run: censusgeocode --version
-    - run: censusgeocode --csv tests/fixtures/batch.csv || echo failed
-    - run: coverage report
+#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
+    - run: pip install -r requirements.txt
+    - run: pip install codecov coverage
+    - run: nosetests --verbose --with-coverage --cover-erase --cover-package=catkin_lint test
+    - run: codecov
       if: "${{ success() }}"
     strategy:
       matrix:
         python:
-        - 3.8
-        - 3.8
-        - 3.8
-        - 3.9
-        - 3.1
-#       # 'allow_failures' transformations are currently unsupported.
+        - '3.8'
+        - '3.8'
