--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,15 +15,14 @@ jobs:
     - uses: actions/setup-python@v5.0.0
       with:
         python-version: "${{ matrix.python }}"
-    - run: pip install poetry
-    - run: poetry install -v
-    - run: poetry run flake8 example/
-    - run: poetry run flake8 tests/
-    - run: poetry run pytest
+    - run: pip install -r requirements.txt
+    - run: pip install .
+    - run: pip install flake8
+    - run: flake8 img2gb test
+    - run: pytest -v test
     strategy:
       matrix:
         python:
         - '3.8'
         - '3.8'
         - '3.8'
-        - '3.9'
