--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,23 @@ jobs:
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
-        python-version: '3.8'
+        python-version: "${{ matrix.python }}"
 #     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: make requirements-test
-    - run: make lint
-    - run: make test
+    - run: pip install -e .[testing]
+    - run: pytest tests
+#     # This item has no matching transformer
+#     - pypi:
+#         provider: pypi
+#         user: vmalloc
+#         password:
+#           secure: IiRY8I5mIBebKxMUNygddVLyyd0j9gRG5hly5r07nIeqqB01cUhrHgTnfqQPBbVYsDzFYRNM4p2+D94YlsRyO/ylGXehNpA/Dmb5tVDLtycbQVBx4rkRwEa0nfcXaF3MO1P0NHbEi3scVhLiaYqTGWsEKGIhUrgWyckuAh99FKo=
+#         'on':
+#           tags: true
+#           repo: getslash/flux
+#       if: "${{ github.event_name == 'push' && ${{ github.ref }} }}"
+    strategy:
+      matrix:
+        python:
+        - 3.8
+        - 3.8
+        - 3.8
