--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,31 +8,28 @@ on:
 #   maximum_number_of_builds: 0
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: # this agent type is not supported: [[{"dist"=>"trusty"}]]
+             ubuntu-latest
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
         python-version: "${{ matrix.python }}"
-    - run: pip install simplejson minimock coverage
-    - run: make test
-#     # This item has no matching transformer
-#     - pypi:
-#         provider: pypi
-#         user: gpodder
-#         password:
-#           secure: LhMmayKATJlyob0pkRvcDfie5vi8O+BdpMgJ224C+SXpwpQafPfHNUFzi3+IkS7z3KbYx/jTpP6gcfmEXnG/nI74U0U4fnY1KQixEfwcRTLHNDnx72qe4zXkXAtBzXCRROnyOTir1AolPiC8lpiL+ZBc8cBwan+322IZdlL8t5g=
-#         'on':
-#           tags: true
-#       if: "${{ github.event_name == 'push' && ${{ github.ref }} }}"
+    - name: Set up pip cache
+      uses: actions/cache@v3.3.2
+      with:
+        path: "~/.cache/pip"
+        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
+        restore-keys: "${{ runner.os }}-pip-"
+#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
+    - run: pip install pyusb coverage coveralls pyserial PyYAML tqdm
+    - run: python setup.py build
+    - run: coverage run --source=stcgal setup.py test
+    - run: coveralls
     strategy:
       matrix:
         python:
         - '3.8'
         - '3.8'
-        - '3.3'
         - '3.8'
-        - '3.8'
-        - '3.8'
-        - 3.8
