--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,22 +14,36 @@ jobs:
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
-        python-version: "${{ matrix.python }}"
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip wheel -r requirements.txt
+        python-version: '3.8'
     - run: pip install -r requirements.txt
-    - run: python setup.py test
-    strategy:
-      matrix:
-        python:
-        - 3.9
-        - 3.8
-        - 3.8
-        - 3.8
-        - pypy-3.6
+    - run: python run_demo_md.py
+  test_2:
+    runs-on: ubuntu-22.04
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: '3.8'
+    - run: pip install -r requirements.txt
+    - run: python run_demo_md.py
+  test_3:
+    runs-on: ubuntu-22.04
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: '3.8'
+    - run: pip install -r requirements.txt
+    - run: python run_demo_md.py
+  test_4:
+    runs-on: ubuntu-22.04
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: '3.8'
+    - run: pip install -r requirements.txt
+    - run: python run_demo_md.py
