--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,16 +12,70 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
+    - run: pip install pipenv
+    - run: pipenv install --dev
+    - run: pipenv run lint
+    - run: pipenv run test
+    strategy:
+      matrix: {}
+#       # 'allow_failures' transformations are currently unsupported.
+  test_2:
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
-        python-version: "${{ matrix.python }}"
-    - run: pip install pycryptodome
-    - run: pip install requests
-    - run: python test.py
-    strategy:
-      matrix:
-        python:
-        - '3.8'
-        - '3.8'
-        - '3.8'
-        - '3.8'
+        python-version: '3.8'
+    - run: pip install pipenv
+    - run: pipenv install --dev
+    - run: pipenv run lint
+    - run: pipenv run test
+  test_3:
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: '3.8'
+    - run: pip install pipenv
+    - run: pipenv install --dev
+    - run: pipenv run lint
+    - run: pipenv run test
+  test_4:
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: '3.8'
+    - run: pip install pipenv
+    - run: pipenv install --dev
+    - run: pipenv run lint
+    - run: pipenv run test
+  test_5:
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: '3.9'
+    - run: pip install pipenv
+    - run: pipenv install --dev
+    - run: pipenv run lint
+    - run: pipenv run test
+  test_6:
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+    - run: pip install pipenv
+    - run: pipenv install --dev
+    - run: pipenv run lint
+    - run: pipenv run test
