--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,23 +8,20 @@ on:
 #   maximum_number_of_builds: 0
 jobs:
   test:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
         python-version: "${{ matrix.python }}"
-    - run: pip install codecov
-    - run: pip install -r requirements.txt
-    - run: pip install -r test-requirements.txt
-    - run: flake8 stockstats.py test.py
-    - run: py.test --cov=./ test.py
-    - run: codecov
-      if: "${{ success() }}"
-#     # This item has no matching transformer
-#     - email:
-#       - jealous@163.com
+    - run: if [[ $TRAVIS_PYTHON_VERSION == 3.8 ]]; then pip install 'setuptools<=60.9.0'; fi
+    - run: python setup.py -q install
+    - run: pip install pylint yapf pytype
+    - run: python setup.py test
+    - run: pylint comment_parser
+    - run: pytype
+    - run: yapf -drp comment_parser
     strategy:
       matrix:
         python:
